--- a/src/main/webapp/WEB-INF/message/messages.properties
+++ b/src/main/webapp/WEB-INF/message/messages.properties
@@ -1,6 +1,7 @@
-username.not.empty=ÓÃ»§Ãû²»ÄÜÎª¿Õ
-username.length.error=ÓÃ»§Ãû³¤¶È²»ºÏ·¨£¬³¤¶È±ØĞëÔÚ£û0£ıµ½£û0£ıÖ®¼ä
-typeMismatch.dataBinderTest.date=ÄúÊäÈëµÄÊı¾İ¸ñÊ½´íÎó£¬ÇëÖØĞÂÊäÈë£¨¸ñÊ½£º2012-03-19 22:17:17£©
+username.not.empty=ï¿½Ã»ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Îªï¿½ï¿½
+username.length.error=ï¿½Ã»ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È²ï¿½ï¿½Ï·ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È±ï¿½ï¿½ï¿½ï¿½Ú£ï¿½0ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½0ï¿½ï¿½Ö®ï¿½ï¿½
+#typeMismatch.å‘½ä»¤å¯¹è±¡å.å±æ€§å
+typeMismatch.dataBinderTest.date=ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½İ¸ï¿½Ê½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ë£¨ï¿½ï¿½Ê½ï¿½ï¿½2012-03-19 22:17:17ï¿½ï¿½
 #typeMismatch.date=2
 #typeMismatch.java.util.Date=3
 #typeMismatch=4
